# karabou

./: .gitignore  CMakeLists.txt  LICENSE  enter2ctrl.c  event_queue.c  event_queue.h  keys.h  run
cmake/: AddCMockaTest.cmake
src/: CMakeLists.txt  assert.h  event_queue.c  karabou.c  keys.c
test/: CMakeLists.txt  test_event_queue.c
